feat: load avatar from api

--- a/src/blocks/popup/__close-button/popup__close-button.css
+++ b/src/blocks/popup/__close-button/popup__close-button.css
@@ -2,6 +2,8 @@
   width: 32px;
   height: 32px;
   position: absolute;
+  background-color: transparent;
+  background-image: url(../../../images/popup_close_button.svg);
   top: 0;
   right: 0;
   transform: translate(40px, -40px);
