--- a/src/blocks/profile/__avatar_edit-button/profile__avatar_edit-button.css
+++ b/src/blocks/profile/__avatar_edit-button/profile__avatar_edit-button.css
@@ -6,4 +6,9 @@
     transform: translate(-50%, -50%);
     z-index: 2;
     cursor: pointer;
+    background: transparent;
+    background-image: url(../../../images/avatar_edit-button.svg);
+    width: 26px;
+    height: 26px;
+    border: none;
 }
